# niltonfrederico

./: .gitignore  .pre-commit-config.yaml  Nilton_Teixeira_CV.yaml  README-EN.md  README.md  pyproject.toml
assets/: cumbuca-dev-logo-base64.txt
nilton/: Preamble.j2.typ
