[project]
name = "niltonfrederico"
version = "0.1.0"
description = "My github profile and cv"
authors = [
    { name = "Nilton Teixeira", email = "9078708+niltonfrederico@users.noreply.github.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = ["nicegui (>=3.9.0,<4.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.9,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "mypy (>=1.20.0,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["niltonfrederico"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
